--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'a role providing a locally cached copy of a remote file'
 author:
   - 'Neil Bowers <neil@bowers.com>'
 build_requires:
+  File::Touch: '0'
   Moo: '0'
   Test::File: '0'
   Test::More: '0.88'
+  autodie: '0'
+  lib: '0'
   strict: '0'
   warnings: '0'
 configure_requires:
@@ -23,8 +26,9 @@ requires:
   File::Spec::Functions: '0'
   HTTP::Tiny: '0'
   Moo::Role: '0'
+  Time::Duration::Parse: '0'
   perl: '5.006'
 resources:
   homepage: https://github.com/neilbowers/MooX-Role-CachedURL
   repository: https://github.com/neilbowers/MooX-Role-CachedURL.git
-version: '0.01'
+version: '0.02'
