Import of NEILB/MooX-Role-CachedURL-0.05.tar.gz from CPAN.
gitpan-cpan-distribution: MooX-Role-CachedURL
gitpan-cpan-version:      0.05
gitpan-cpan-path:         NEILB/MooX-Role-CachedURL-0.05.tar.gz
gitpan-cpan-author:       NEILB
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,17 @@ license = Perl_5
 copyright_holder = Neil Bowers
 copyright_year   = 2014
 
-version = 0.04
+version = 0.05
 
 [@Basic]
 [PkgVersion]
 [AutoPrereqs]
 skip = CPAN::Robots
+
+[Encoding]
+encoding = bytes
+filename = t/data/sample-robots.txt.gz
+
 [GithubMeta]
 [Git::Tag]
 tag_message=
