--- a/META.yml
+++ b/META.yml
@@ -26,9 +26,10 @@ requires:
   File::Spec::Functions: '0'
   HTTP::Tiny: '0'
   Moo::Role: '0'
+  PerlIO::gzip: '0'
   Time::Duration::Parse: '0'
   perl: '5.006'
 resources:
   homepage: https://github.com/neilbowers/MooX-Role-CachedURL
   repository: https://github.com/neilbowers/MooX-Role-CachedURL.git
-version: '0.04'
+version: '0.05'
