Import of NEILB/MooX-Role-CachedURL-0.07.tar.gz from CPAN.
gitpan-cpan-distribution: MooX-Role-CachedURL
gitpan-cpan-version:      0.07
gitpan-cpan-path:         NEILB/MooX-Role-CachedURL-0.07.tar.gz
gitpan-cpan-author:       NEILB
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,13 +4,13 @@ license = Perl_5
 copyright_holder = Neil Bowers
 copyright_year   = 2014
 
-version = 0.06
+version = 0.07
 
 [@Basic]
 [PkgVersion]
 [AutoPrereqs]
 skip = CPAN::Robots
-
+[MetaJSON]
 [Encoding]
 encoding = bytes
 filename = t/data/sample-robots.txt.gz
